# lechess

./: .gitignore  Cargo.toml  README.md  train.sh
models/: Makefile  chessdata.py  export.py  init.py  main.py  preprocess.py  requirements.txt  train.py
src/: README.md  best_move.rs  board.rs  eval.rs  gen_dataset.rs  main.rs  move_list.rs  nn.rs  stockfish.rs  tt.rs  uci.rs
