[package]
name = "duchess"
version = "0.1.0"
edition = "2024"
authors = ["Hrishabh Mittal"]
description = "A custom chess engine"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
debug = true
